crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_listing_fold.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3754
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3,
    4,
    5
  ],
  "sum": 15
}
