crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_listing_join.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    "a",
    "b",
    "c"
  ],
  "r1": "a, b, c"
}
