crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_map_api_access.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3501
expression: eval_pkl(source)
---
{
  "m": {
    "a": 1,
    "b": 2,
    "c": 3
  },
  "contains_key": true,
  "contains_key_no": false,
  "get": 2,
  "get_or_null": null
}
