crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_map_api_fold.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3531
expression: eval_pkl(source)
---
{
  "m": {
    "a": 1,
    "b": 2,
    "c": 3
  },
  "sum": 6
}
