crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_map_api_properties.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3489
expression: eval_pkl(source)
---
{
  "m": {
    "a": 1,
    "b": 2,
    "c": 3
  },
  "empty": false,
  "length": 3,
  "keys": [
    "a",
    "b",
    "c"
  ],
  "values": [
    1,
    2,
    3
  ],
  "entries": [
    [
      "a",
      1
    ],
    [
      "b",
      2
    ],
    [
      "c",
      3
    ]
  ]
}
