crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_map_api_transform.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 3511
expression: eval_pkl(source)
---
{
  "m": {
    "a": 1,
    "b": 2,
    "c": 3
  },
  "filtered": {
    "b": 2,
    "c": 3
  },
  "mapped": {
    "a": 10,
    "b": 20,
    "c": 30
  }
}
