crates/rpkl-runtime/tests/snapshots/snapshot_tests__upstream_mapping_amendment.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 4334
expression: eval_pkl(source)
---
{
  "base": {
    "a": 1,
    "b": 2
  },
  "amended": {
    "a": 10,
    "b": 2,
    "c": 3
  }
}
